db/crates/testing/tests/testscript/errors/string_escape_unicode_long.error
parse error at line 2 column 12 for "\"'\\\\u{1234567}'\"":
'\u{1234567}'
           ^